--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -18,7 +18,7 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 </head>
-
+{{/* Context is of type ui.IndexPageData */}}
 <body 
   class="container mx-auto grid lg:grid-cols-[1fr_5fr]"
 >
@@ -35,7 +35,9 @@
     
     <div class="flex">
       <select name="" id="">
-        <option value="">Select a Scene</option>
+        {{ range .Collections }}
+          <option value="{{.ID}}">{{ .Name }}</option>
+        {{ end }}
       </select>
     
       <button>
@@ -43,16 +45,46 @@
       </button>
     </div>
     
-    <form class="hidden">
-      <input type="text" name="" id="" placeholder="Scene Name">
+    <form class="flex flex-wrap" action="/new-scene" method="POST">
+      <input 
+        type="text" 
+        class="invisible h-0 block" 
+        name="collection-ID" 
+        value={{ .ActiveCollection.ID }}
+      >
+
+      <input 
+        type="text"
+        class="w-full" 
+        name="scene-name" 
+        placeholder="Scene Name"
+        required
+      >
+
       <button>Save</button>
-      <button>Cancel</button>
+      <button type="button">Cancel</button>
     </form>
+
+    <div>
+      {{ range .SceneList }}
+        <a href="/?scene={{.ID}}">{{ .Name }}</a>
+      {{ else }}
+        <p>Please add a scene</p>
+      {{ end }}
+    </div>
   </section>
   <main>
-    <h2>Untitled Scene</h2>
-    <div id="app"></div>
+    {{ if .ActiveScene.ID }}
+      <h2>{{ .ActiveScene.Name }}</h2>
+      <div id="app"></div>
+    
+    {{ else }}
+      <p>Select a scene to start drawing</p>
+    {{ end }}
   </main>
+
+{{ if .ActiveScene.ID }}
   <script type="text/babel" src="public/excalidraw/index.js"></script>
+{{ end }}
 </body>
 </html>
