--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -75,6 +75,7 @@
   </section>
   <main>
     {{ if .ActiveScene.ID }}
+      <p class="invisible h-0" id="scene-id"> {{.ActiveScene.ID}} </p>
       <h2>{{ .ActiveScene.Name }}</h2>
       <div id="app"></div>
     
