--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -27,9 +27,9 @@
 {{/* Context is of type ui.IndexPageData */}}
 <body 
   hx-boost="true"
-  class="container mx-auto grid md:grid-cols-[1fr_5fr] lg:grid-cols-[1fr_4fr]"
+  class="px-base lg:px-large grid md:grid-cols-[1fr_5fr] lg:grid-cols-[1fr_4fr]"
 >
-  <section class="sidebar">
+  <section class="sidebar bg-gray-50">
     <button>
       New collection
     </button>
