--- a/ui/templates/home/scene-list.tmpl
+++ b/ui/templates/home/scene-list.tmpl
@@ -4,7 +4,7 @@
   <a 
     hx-get="/?scene={{.ID}}"
     hx-target="body" 
-    class="underline font-medium cursor-pointer"
+    class="underline font-medium cursor-pointer w-fit"
   >
     {{ .Name }}
   </a>
