--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -554,40 +554,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 button {
   border-radius: 0.375rem;
   border-width: 1px;
@@ -624,11 +590,6 @@ button {
   z-index: 10;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .block {
   display: block;
 }
@@ -641,12 +602,21 @@ button {
   display: grid;
 }
 
-.hidden {
-  display: none;
-}
-
 .h-0 {
   height: 0px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-full {
@@ -739,10 +709,6 @@ body {
 }
 
 @media (min-width: 1024px) {
-  .lg\:grid-cols-\[1fr_5fr\] {
-    grid-template-columns: 1fr 5fr;
-  }
-
   .lg\:grid-cols-\[1fr_4fr\] {
     grid-template-columns: 1fr 4fr;
   }
