--- a/ui/templates/home/select-collection.tmpl
+++ b/ui/templates/home/select-collection.tmpl
@@ -5,6 +5,7 @@
   id="select-collection"
   hx-get="/"
   hx-target="body"
+  class="rounded p-small"
 >
   {{ range .CollectionsList }}
     <option 
