--- a/ui/templates/home/scene-list.tmpl
+++ b/ui/templates/home/scene-list.tmpl
@@ -2,13 +2,13 @@
 
 {{ range . }}
   <div
-    class="flex justify-between"
+    class="flex justify-between items-center"
     id="scene-list-{{ .ID }}"
   >
     <a
       hx-get="/?scene={{.ID}}"
       hx-target="body"
-      class="underline font-medium cursor-pointer w-fit capitalize"
+      class="underline cursor-pointer w-fit capitalize"
     >
       {{ .Name }}
     </a>
@@ -17,6 +17,7 @@
      hx-delete="/?scene-ID={{ .ID }}"
      hx-target="#scene-list-{{ .ID }}"
      hx-confirm="Are you sure you want to delete scene {{ .Name }}"
+     class="w-6 h-6 flex justify-center items-center"
     >
       x
     </button>
