--- a/ui/templates/home/scene-list.tmpl
+++ b/ui/templates/home/scene-list.tmpl
@@ -1,12 +1,12 @@
-{{/* Context should be of type []services.Scene */}}
+{{/* Context should be of type []services.Drawing */}}
 
 {{ range . }}
   <div
     class="flex justify-between items-center"
-    id="scene-list-{{ .ID }}"
+    id="drawing-list-{{ .ID }}"
   >
     <a
-      hx-get="/?scene={{.ID}}"
+      hx-get="/?drawing={{.ID}}"
       hx-target="body"
       class="underline cursor-pointer w-fit capitalize"
     >
@@ -14,14 +14,14 @@
     </a>
 
     <button
-     hx-delete="/?scene-ID={{ .ID }}"
-     hx-target="#scene-list-{{ .ID }}"
-     hx-confirm="Are you sure you want to delete scene {{ .Name }}"
+     hx-delete="/?drawing-ID={{ .ID }}"
+     hx-target="#drawing-list-{{ .ID }}"
+     hx-confirm="Are you sure you want to delete drawing {{ .Name }}"
      class="w-6 h-6 flex justify-center items-center"
     >
       x
     </button>
   </div>
 {{ else }}
-  <p>Please add a scene</p>
+  <p>Please add a drawing</p>
 {{ end }}
