--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -595,8 +595,12 @@ input::placeholder {
   background-color: rgb(0 0 0 / 0.5);
 }
 
-.invisible {
-  visibility: hidden;
+.collapse {
+  visibility: collapse;
+}
+
+.static {
+  position: static;
 }
 
 .absolute {
@@ -615,28 +619,16 @@ input::placeholder {
   z-index: 10;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
 .mb-base {
   margin-bottom: var(--space-base);
-}
-
-.mb-large {
-  margin-bottom: calc(1.5 * var(--space-base));
-}
-
-.mt-base {
-  margin-top: var(--space-base);
 }
 
 .mb-small {
   margin-bottom: calc(0.5 * var(--space-base));
 }
 
-.block {
-  display: block;
+.mt-base {
+  margin-top: var(--space-base);
 }
 
 .flex {
@@ -647,24 +639,24 @@ input::placeholder {
   display: grid;
 }
 
+.\!hidden {
+  display: none !important;
+}
+
 .hidden {
   display: none;
 }
 
-.h-0 {
-  height: 0px;
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
-.h-6 {
-  height: 1.5rem;
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-fit {
@@ -678,14 +670,6 @@ input::placeholder {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-6 {
-  width: 1.5rem;
 }
 
 .cursor-pointer {
@@ -720,12 +704,12 @@ input::placeholder {
   gap: calc(0.5 * var(--space-base));
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -756,20 +740,12 @@ input::placeholder {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-0 {
-  padding: 0px;
-}
-
-.p-large {
-  padding: calc(1.5 * var(--space-base));
-}
-
 .p-base {
   padding: var(--space-base);
 }
 
-.p-tiny {
-  padding: calc(0.125 * var(--space-base));
+.p-large {
+  padding: calc(1.5 * var(--space-base));
 }
 
 .p-small {
@@ -786,11 +762,6 @@ input::placeholder {
   padding-bottom: calc(0.5 * var(--space-base));
 }
 
-.py-base {
-  padding-top: var(--space-base);
-  padding-bottom: var(--space-base);
-}
-
 .text-center {
   text-align: center;
 }
@@ -805,14 +776,6 @@ input::placeholder {
 
 .capitalize {
   text-transform: capitalize;
-}
-
-.leading-none {
-  line-height: 1;
-}
-
-.leading-\[0\] {
-  line-height: 0;
 }
 
 .underline {
@@ -848,10 +811,5 @@ body {
 @media (min-width: 1024px) {
   .lg\:grid-cols-\[1fr_4fr\] {
     grid-template-columns: 1fr 4fr;
-  }
-
-  .lg\:px-large {
-    padding-left: calc(1.5 * var(--space-base));
-    padding-right: calc(1.5 * var(--space-base));
   }
 }
