--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -1,37 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Excalidraw:Local</title>
+{{/* extends "base" */}}
 
-  <link rel="stylesheet" href="/public/css/styles.css">
+{{/* Context is of type ui.IndexPageData */}}
 
+{{ block "head-scripts" .}}
   <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
 
 
   <script
-  type="text/javascript"
-  src="https://unpkg.com/@excalidraw/excalidraw/dist/excalidraw.production.min.js"
-></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    type="text/javascript"
+    src="https://unpkg.com/@excalidraw/excalidraw/dist/excalidraw.production.min.js"
+  ></script>
 
-<script 
-  src="https://unpkg.com/htmx.org@2.0.1" 
-  integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" 
-  crossorigin="anonymous"
-></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+{{ end }}
 
-</head>
-{{/* Context is of type ui.IndexPageData */}}
-<body 
-  class="h-screen
-    grid md:grid-cols-[1fr_5fr] lg:grid-cols-[1fr_4fr]"
-  
-  hx-boost="true"
->
-  
+{{ block "body-class" . }}
+  h-screen grid md:grid-cols-[1fr_5fr] lg:grid-cols-[1fr_4fr]
+{{ end }}
+
+{{ block "content" . }}
   {{ template "sidebar" . }}
 
   <main class="h-screen">
@@ -55,13 +43,12 @@
   <script type="module" src="public/stimulus/index.js"></script>
   <script type="text/babel" src="public/excalidraw/index.js"></script>
   <script type="text/babel" src="public/script.js"></script>
-</body>
-</html>
+{{ end }}
 
 {{ define "sidebar" }}
-<section 
-  class="bg-gray-50 h-screen p-base"
->
+  <section 
+    class="bg-gray-50 h-screen p-base"
+  >
   <div
     data-controller="toggleVisibility"
   >
