complete register handler

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -615,6 +615,16 @@ input::placeholder {
   z-index: 10;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-large {
+  margin-top: calc(1.5 * var(--space-base));
+  margin-bottom: calc(1.5 * var(--space-base));
+}
+
 .mb-base {
   margin-bottom: var(--space-base);
 }
@@ -625,6 +635,14 @@ input::placeholder {
 
 .mt-base {
   margin-top: var(--space-base);
+}
+
+.mb-large {
+  margin-bottom: calc(1.5 * var(--space-base));
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -700,6 +718,12 @@ input::placeholder {
   gap: calc(0.5 * var(--space-base));
 }
 
+.space-x-base > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(var(--space-base) * var(--tw-space-x-reverse));
+  margin-left: calc(var(--space-base) * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -772,6 +796,11 @@ input::placeholder {
 
 .capitalize {
   text-transform: capitalize;
+}
+
+.text-red-900 {
+  --tw-text-opacity: 1;
+  color: rgb(127 29 29 / var(--tw-text-opacity));
 }
 
 .underline {
