--- a/ui/templates/home/drawing-list.tmpl
+++ b/ui/templates/home/drawing-list.tmpl
@@ -1,20 +1,28 @@
-{{/* Context should be of type []services.Drawing */}}
+{{/* Context should be of type ui.DrawingListData */}}
 
-{{ range . }}
+{{ range .DrawingList }}
   <div
     class="flex justify-between items-center"
     id="drawing-list-{{ .ID }}"
   >
     <a
-      hx-get="/?drawing={{.ID}}"
+      hx-get="/app?drawing={{.ID}}"
       hx-target="body"
       class="underline cursor-pointer w-fit capitalize"
     >
       {{ .Name }}
     </a>
 
+    {{ if (index $.PresenceMap .ID) }}
+      {{ range (index $.PresenceMap .ID) }}
+          <div class="rounded-full w-4 h-4 border border-black">
+            {{ . }}
+          </div>
+      {{end}}
+    {{ end }}
+
     <button
-     hx-delete="/?drawing-ID={{ .ID }}"
+     hx-delete="/app?drawing-ID={{ .ID }}"
      hx-target="#drawing-list-{{ .ID }}"
      hx-confirm="Are you sure you want to delete drawing {{ .Name }}"
      class="w-6 h-6 flex justify-center items-center"
