add names to register form

--- a/ui/templates/register.tmpl
+++ b/ui/templates/register.tmpl
@@ -21,6 +21,21 @@
     class="flex flex-col gap-base w-fit mx-auto"
   >
     <input 
+      type="text" 
+      name="first-name"
+      placeholder="First Name..." 
+      required
+    >
+
+
+    <input 
+      type="text" 
+      name="last-name"
+      placeholder="Last Name..." 
+      required
+    >
+
+    <input 
       type="email" 
       name="email"
       placeholder="Enter email..." 
