--- a/ui/templates/home/drawing-list.tmpl
+++ b/ui/templates/home/drawing-list.tmpl
@@ -2,9 +2,24 @@
 
 {{ range .DrawingList }}
   <div
-    class="flex justify-between items-center"
+    class="flex justify-start items-center w-full"
     id="drawing-list-{{ .ID }}"
   >
+    {{ if (index $.PresenceMap .ID) }}
+      <div
+        class="max-w-10 overflow-auto flex justify-start mr-small"
+      >
+        {{ range (index $.PresenceMap .ID) }}
+            <div 
+              class="rounded-full w-5 h-5 flex flex-center 
+              text-vSmall border border-black"
+              title="{{ .Name }}"
+            >
+              {{ .Initials }}
+            </div>
+        {{end}}
+      </div>
+    {{ end }}
     <a
       hx-get="/app?drawing={{.ID}}"
       hx-target="body"
@@ -13,23 +28,12 @@
       {{ .Name }}
     </a>
 
-    {{ if (index $.PresenceMap .ID) }}
-      {{ range (index $.PresenceMap .ID) }}
-          <div 
-            class="rounded-full w-5 h-5 flex flex-center 
-            text-vSmall border border-black"
-            title="{{ .Name }}"
-          >
-            {{ .Initials }}
-          </div>
-      {{end}}
-    {{ end }}
 
     <button
      hx-delete="/app?drawing-ID={{ .ID }}"
      hx-target="#drawing-list-{{ .ID }}"
      hx-confirm="Are you sure you want to delete drawing {{ .Name }}"
-     class="w-6 h-6 flex justify-center items-center"
+     class="ml-auto w-6 h-6 flex justify-center items-center"
     >
       x
     </button>
