minor bug fixes

--- a/ui/templates/home/select-collection.tmpl
+++ b/ui/templates/home/select-collection.tmpl
@@ -3,7 +3,7 @@
 <select 
   name="select-collection" 
   id="select-collection"
-  hx-get="/"
+  hx-get="/app"
   hx-target="body"
   class="rounded p-small"
 >
