--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -634,16 +634,12 @@ input::placeholder {
   margin-bottom: var(--space-base);
 }
 
-.mb-small {
-  margin-bottom: calc(0.5 * var(--space-base));
-}
-
 .ml-auto {
   margin-left: auto;
 }
 
-.mr-small {
-  margin-right: calc(0.5 * var(--space-base));
+.mr-tiny {
+  margin-right: calc(0.125 * var(--space-base));
 }
 
 .mt-base {
@@ -707,8 +703,14 @@ input::placeholder {
   width: 100vw;
 }
 
-.max-w-10 {
-  max-width: 2.5rem;
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-1\/4 {
+  --tw-translate-x: -25%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -743,20 +745,12 @@ input::placeholder {
   gap: var(--space-base);
 }
 
-.gap-large {
-  gap: calc(1.5 * var(--space-base));
-}
-
 .gap-small {
   gap: calc(0.5 * var(--space-base));
 }
 
 .gap-vLarge {
   gap: calc(2 * var(--space-base));
-}
-
-.overflow-auto {
-  overflow: auto;
 }
 
 .rounded {
