--- a/ui/templates/home/drawing-list.tmpl
+++ b/ui/templates/home/drawing-list.tmpl
@@ -6,20 +6,9 @@
     id="drawing-list-{{ .ID }}"
   >
     {{ if (index $.PresenceMap .ID) }}
-      <div
-        class="max-w-10 overflow-auto flex justify-start mr-small"
-      >
-        {{ range (index $.PresenceMap .ID) }}
-            <div 
-              class="rounded-full w-5 h-5 flex flex-center 
-              text-vSmall border border-black"
-              title="{{ .Name }}"
-            >
-              {{ .Initials }}
-            </div>
-        {{end}}
-      </div>
+      <Avatar-group data="{{(index $.PresenceMap .ID)}}" />
     {{ end }}
+
     <a
       hx-get="/app?drawing={{.ID}}"
       hx-target="body"
